--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@apollo/gateway": "^2.0.0-alpha.5",
     "apollo-server": "^3.6.2",
+    "dotenv": "^16.0.0",
     "esm": "^3.2.25",
     "graphql": "^16.3.0"
   },
